Created a select text event

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
+    <input value="Select some text in this header"><p id="selectText"></p>
+    <p>Resize your browser</p>
+    <p>Height: <span id="height"></span></span></p>
+    <p>Width: <span id="width"></span></p>
   </footer>
 
 </body>
